turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:14: error: '=' expected but ';' found.
	while (cpt<rule.length && pos<0) {
^